--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "ownerNumber": "6281575886399@s.whatsapp.net",
-  "ownerName": "Riy",
-  "botName": "Minato-Md",
+  "ownerNumber": "6285806917113@s.whatsapp.net",
+  "ownerName": "Pixyog",
+  "botName": "PYPBOT",
   "footer": "Support By skysufers.xyz",
   "youtube": "https://youtube.com/@riycoders",
   "packname": "Created By",
-  "author": "@riycoders",
+  "author": "@pixelyoga",
   "donasi": {
-    "dana": "081575886399",
-    "gopay": "081575886399"
+    "dana": "085806917113",
+    "gopay": "085806917113"
   },
   "sessionName": "session",
   "pathimg": "./media/minato.jpg",
